<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="adapt"
            type="com.example.rahulkumar.githubproject.ViewModels.VM.SearchResultViewModel"></variable>

    </data>

    <android.support.v7.widget.CardView
        android:id="@+id/searchCard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_view_size"
        android:layout_marginLeft="@dimen/card_view_margin"
        android:layout_marginTop="@dimen/card_view_margin"
        android:layout_marginRight="@dimen/card_view_margin"
        app:cardCornerRadius="@dimen/dimen_0dp"
        app:cardElevation="@dimen/card_view_elevation"
        app:contentPadding="@dimen/dimen_10dp"
        android:onClick="@{(context)->adapt.getItemClick(context)}"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="@dimen/card_image_view_width"
                android:layout_height="@dimen/card_image_view_height"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:image="@{adapt.imageUrl}"
                />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtNameHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/image"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:textSize="@dimen/dimen_16dp"
                android:textColor="@color/black"
                android:fontFamily="@font/robotobold"
                android:text="@string/namee"
                />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txtNameHead"
                android:layout_alignTop="@+id/txtNameHead"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="@dimen/dimen_16dp"
                android:fontFamily="@font/robotoregular"
                android:text="@{adapt.name}"
                />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtFullNameHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/image"
                android:layout_below="@+id/txtNameHead"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:textSize="@dimen/dimen_16dp"
                android:textColor="@color/black"
                android:fontFamily="@font/robotobold"
                android:text="@string/full_name"
                />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txtFullNameHead"
                android:layout_alignTop="@+id/txtFullNameHead"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="@dimen/dimen_16dp"
                android:fontFamily="@font/robotoregular"
                android:text="@{adapt.fullName}"
                />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtWatcherCountHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/image"
                android:layout_below="@+id/txtFullNameHead"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:textSize="@dimen/dimen_16dp"
                android:textColor="@color/black"
                android:fontFamily="@font/robotobold"
                android:text="@string/watchers_count"
                />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtWatchersCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txtWatcherCountHead"
                android:layout_alignTop="@+id/txtWatcherCountHead"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="@dimen/dimen_16dp"
                android:fontFamily="@font/robotoregular"
                android:text="@{adapt.watchersCount}"
                />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtCommitCountHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/image"
                android:layout_below="@+id/txtWatcherCountHead"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:textSize="@dimen/dimen_16dp"
                android:textColor="@color/black"
                android:fontFamily="@font/robotobold"
                android:text="@string/commit_count"
                />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtCommitCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txtCommitCountHead"
                android:layout_alignTop="@+id/txtCommitCountHead"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="@dimen/dimen_16dp"
                android:fontFamily="@font/robotoregular"
                android:text="@{adapt.commitCount}"
                />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</layout>
